<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/general_margin_120px"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@color/colorLightGrey">

    <LinearLayout
        android:id="@+id/llImageContainer"
        android:layout_width="@dimen/general_margin_120px"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivTeam"
            android:layout_width="@dimen/general_margin_40px"
            android:layout_height="@dimen/general_margin_40px"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/general_margin_10px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tvOverallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_overall"/>

            <TextView
                android:id="@+id/tvOverall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tvStrengthTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_strength"/>

            <TextView
                android:id="@+id/tvStrength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tvIntelligenceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_intelligence"/>

            <TextView
                android:id="@+id/tvIntelligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tvSpeedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_speed"/>

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tvEnduranceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_Endurance"/>

            <TextView
                android:id="@+id/tvEndurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tvRankTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_rank"/>

            <TextView
                android:id="@+id/tvRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tvCourageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_courage"/>

            <TextView
                android:id="@+id/tvCourage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tvFirepowerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_firepower"/>

            <TextView
                android:id="@+id/tvFirepower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tvSkillTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transformers_item_skill"/>

            <TextView
                android:id="@+id/tvSkill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>